deployments/base/nso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cisco-nso-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  rules:
  - host: dev.nso
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-proxy-svc
            port: 
              number: 80
---
